2008/04/24
	30. Added a standalone CORBA server running without the interface.
	
2008/04/17
	29. If CXXFLAGS and CFLAGS are not defined at configuration, they are set to "-Wall".
	
2008/04/07

	28. Adaptation to KPP version 2.04.500.
	
2008/03/22
	27. ChppciServer object now builds a map of steering method factories referenced 
	by names. New steering methods can thus be added and set by CORBA request setSteeringMethod.

2008/02/29	
	26. Finer handling of exceptions in CORBA initialization. 
	
hpp-corbaserver 1.2 released February 18, 2008.

	25. Added two requests to make a joint visible or transparent.
	24. Unsuccessfully tried to destroy correctly Corba objects in
	    order to rebuild them but failed.
	23. Added recently developed roadmap builders in
	    ChppciProblem::setRoadmapbuilder.
	22. Remove reference to kwsPlusRoadmap.
	21. Do not delete attribute attHppPlanner at destruction of
	    ChppciServer.
	20. Correction of documentation generation related to previous
	    modification.
	19. Reorganization of header files to solve some compilation
	    problems.
	18. Adaptation to changes in hppCore.
	
hpp-corbaserver 1.1 released October 10, 2007.

	17. Added missing hppTools.h in EXTRA_DIST.
	16. Added CORBA requests to display a roadmap in the interface.
	15. Added a CORBA request to optimize a path.
	14. Renamed setJointLocked into setDofLocked.
	13. hppCorbaServer can now run with KPP interface without
	    crashing. The CORBA interface enables a user
	  - to build a robot joint by joint and body by body,
	  - to add and move obstacles
	  - to define initial and goal configurations and
	  - to solve a problem.
	12. Made corrections in interface implementation
	    ChppciRobotServer.idl to take into account the new version of
	    KineoPathPlanner. This had not been done.
	11. Added Reeds and Shepp local steering method.
	10. Create POA with PortableServer::MAIN_THREAD_MODEL as thread
	   policy in order to make main thread process corba requests.