@@ -16,38 +16,59 @@
 interface ChppciProblem {
   /** \brief Set steering method of specified robot in ChppPlanner::robotVector.
    \param inProblemId rank of problem in vector of hppProblems.
-   \param inSteeringMethod name of the steering method in {"linear", "flic", "rs"}.
+   \param inSteeringMethodName name of the steering method in {"linear", "flic", "rs"}.
    \param inOriented whether local method is oriented or not.
+   \return 0 if success, -1 if failure.
 
    The steering method implemented are
    \li "linear": linear interpolation in configuration parameter space,
    \li "flic": flat interpolation for cart-like robot
    \li "rs": Reeds and Shepp optimal curves
   */
-  short setSteeringMethod(in short inProblemId, in string inSteeringMethod, in boolean inOriented);
+  short setSteeringMethod(in short inProblemId, in string inSteeringMethodName, in boolean inOriented);
+
   /** \brief Set roadmap builder of specified robot in ChppPlanner::robotVector.
-   \param inProblemId rank of problem in vector of hppProblems.
-   \param inRoadmapBuilder name of the roadmap builder in {"basic", "diffusing", "bi-diffusing", "IPP", "visibility", "PCA<diffusing>"}.
+      \param inProblemId rank of problem in vector of hppProblems.
+      \param inRoadmapBuilderName name of the roadmap builder in {"basic", "diffusing", "bi-diffusing", "IPP", "visibility", "PCA<diffusing>"}.
+      \return 0 if success, -1 if failure.
   */
-  short setRoadmapbuilder(in short inProblemId, in string inRoadmapBuilder);
+  short setRoadmapbuilder(in short inProblemId, in string inRoadmapBuilderName);
+
   /** \brief Set path optimizer of specified robot in ChppPlanner::robotVector.
    \param inProblemId rank of problem in vector of hppProblems.
-   \param inPathOptimizer name of the steering method in {"clear", "adaptiveShortcut", "random", "none"}.
+   \param inPathOptimizerName name of the steering method in {"clear", "adaptiveShortcut", "random", "none"}.
+   \return 0 if success, -1 if failure.
   */
-  short setPathOptimizer(in short inProblemId, in string inPathOptimizer);
+  short setPathOptimizer(in short inProblemId, in string inPathOptimizerName);
+  
+  /** \brief Set distance function used by roadmap builder
+      \param inProblemId Rank of problem in vector of hppProblems.
+      \param inDistanceName Name of the distance function.
+      \param inOriented whether distance corresponds to an oriented local method.
+
+      \return 0 if success, -1 if failure.
+  */
+  short setDistanceFunction(in short inProblemId, in string inDistanceName, in boolean inOriented);
+
   /** \brief Set initial configuration of specified robot in ChppPlanner::robotVector.
    \param inProblemId rank of robot in vector of robots.
-   \param dofArray Array of degrees of freedom */
+   \param dofArray Array of degrees of freedom 
+   \return 0 if success, -1 if failure.
+  */
   short setInitialConfig(in short inProblemId, in dofSeq dofArray);
+
   /** \brief Set goal configuration of specified robot in ChppPlanner::robotVector.
    \param inProblemId rank of robot in vector of robots.
-   \param dofArray Array of degrees of freedom */
+   \param dofArray Array of degrees of freedom 
+   \return 0 if success, -1 if failure.
+  */
   short setGoalConfig(in short inProblemId, in dofSeq dofArray);
+
   /** \brief Solve specified problem in ChppPlanner::robotVector.
       \param inProblemId rank of robot in vector of robots.
-      \param inLastPathId rank of the last path created
+      \param outLastPathId rank of the last path created
       \param pathLength : length of inLastPathId
-      \return the status : KD_OK or KD_ERROR
+      \return 0 if success, -1 if failure.
       \note  HOW TO USE IN PYTHON SCRIPT :
              the python script doesn't allow you to call the function by the following prototype :
              short solveOneProblem(in short inProblemId, out short inLastPathId, out double pathLength)
@@ -55,13 +76,15 @@ interface ChppciProblem {
              (short, short inLastPathId, double pathLength ) = solveOneProblem(in short inProblemId)
              which return a list of all the return parameter
   */
-  short solveOneProblem(in short inProblemId, out short inLastPathId, out double pathLength);
+  short solveOneProblem(in short inProblemId, out short outLastPathId, out double pathLength);
   /**
      \brief Initialize the path planning problem
+     \return 0 if success, -1 if failure.
   */
   short initializeProblem();
   /**
      \brief Solve the problem of corresponding ChppPlanner object
+     \return 0 if success, -1 if failure.
   */
   short solve();
 
@@ -69,6 +92,7 @@ interface ChppciProblem {
        \brief Optimize a given path
        \param inProblemId Id of the problem owning the path.
        \param inPathId Id of the path in this problem.
+       \return 0 if success, -1 if failure.
     */
   short optimizePath(in short inProblemId, in short inPathId);
 
@@ -85,7 +109,7 @@ interface ChppciProblem {
       \param inProblemId: rank of robot in vector of robots.
       \param tolerance: tolerance set to the obstacles
              if there are no obstacles nothing is done.
-      \return success(0 - KD_OK) or failure(-1 - KD_ERROR) 
+       \return 0 if success, -1 if failure.
   */
   short setObstacleTolerance(in short inProblemId, in double tolerance);
   
